--- a/source/stylesheets/_flex.scss
+++ b/source/stylesheets/_flex.scss
@@ -3,6 +3,11 @@
     justify-content: space-between;
 }
 
+.flex.tall {
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
 @media print {
     .half {
         width: calc(100% / 2 - 0.1cm);
