Add Actions in Combat to rules reference

--- a/source/worksheets/reference.html.slim
+++ b/source/worksheets/reference.html.slim
@@ -353,7 +353,7 @@ section.columns
     | After Con score minutes immersed in frigid water, a character must succeed on a DC 10 Con save every additional minute or gain 1 level of exhaustion. Creatures with cold resistance or immunity automatically succeed, as do those naturally adapted to cold water.
   h5 Extreme Heat
   p
-    | Above 100&#176;F, a creature without drinkable water must make a Con save  each hour or suffer 1 level of exhaustion. The DC starts at 5 and increases by 1 each hour. Creatures in medium or heavy armor or heavy clothing have disadvantage on the save. Creatures with fire resistance or immunity automatically succeed, as do those naturally adapted to hot climates.
+    | Above 100&#176;F, a creature without drinkable water must make a Con save each hour or suffer 1 level of exhaustion. The DC starts at 5 and increases by 1 each hour. Creatures in medium or heavy armor or heavy clothing have disadvantage on the save. Creatures with fire resistance or immunity automatically succeed, as do those naturally adapted to hot climates.
   h5 Strong Wind
   p
     | Imposes disadvantage on ranged weapon attacks and Wisdom (Perception) checks using hearing. Extinguishes open flames and disperses fog. A flying creature in a strong wind must land or fall at the end of its turn. Dust or sand in a strong wind also lightly obscures the area.
@@ -362,7 +362,7 @@ section.columns
     | Lightly obscures the area. Imposes disadvantage on Wisdom (Perception) checks using hearing. Extinguishes open flames.
   h5 High Altitude
   p
-    | Traveling at altitudes above 10,000 ft. halves the distance a character can travel without exhaustion. Spending 30 days at this altitude acclimates a character and removes this penalty, but only up to 20,000 ft. unless they are native to that altitude.
+    | Traveling at altitudes above 10,000 ft. halves the distance a character can travel without exhaustion. Spending 30 days at this altitude acclimates a character and removes this penalty, but only up to 20,000 ft.
   h5 Slippery Ice
   p
     | Slippery ice is difficult terrain. When a creature moves onto slippery ice for the first time on a turn, it must succeed on a DC 10 Dexterity (Acrobatics) check or fall prone.
@@ -377,9 +377,6 @@ section.columns
   h5 Razorvine
   p
     | A 10&times;10&times;5 ft. area of razorvine has AC 11, 25 hp, and immunity to bludgeoning, piercing, and psychic damage. When a creature comes into contact with razorvine for the first time on a turn, it must succeed on a DC 10 Dex save or take 5 (1d10) slashing damage.
-
-.divider
-section.columns
 
 .divider
 section.columns
@@ -427,3 +424,43 @@ section.columns
     span.emph<> full cover
     | can't be directly targeted by spells or attacks.
 
+  h3 Actions in Combat
+  h5 Attack
+  p
+    | Make one melee or ranged attack.
+  h5 Cast a Spell
+  p
+    | Not necessarily an action; use spell casting time. See spellcasting rules.
+  h5 Dash
+  p
+    | Gain extra movement on this turn equal to your speed, after applying any modifiers.
+  h5 Disengage
+  p
+    | Your movement doesn't provoke attacks of opportunity until the end of your turn.
+  h5 Dodge
+  p
+    | Until the start of your next turn, any attack roll against you has disadvantage if you can see the attacker, and you make Dexterity saves with advantage. You lose this benefit if incapacitated, or if your speed drops to 0.
+  h5 Help
+  p
+    | Aid a creature in a task; the creature gains advantage on the next ability check it makes to perform the task, if it happens before the end of your next turn.
+  p
+    | Alternatively, aid a friendly creature in attacking a creature within 5 feet of you. If your ally attacks the target before your next turn, the first attack roll has advantage.
+  h5 Hide
+  p
+    | Make a Dexterity (Stealth) check in attempt to hide.
+  h5 Ready
+  p
+    | Declare a perceivable circumstance that will trigger your reaction, and an action you will take in response to it (alternatively, you may move up to your speed). When the trigger occurs, you can use your reaction to perform the action, or ignore the trigger.
+  p
+    | If you ready a spell, you cast it as normal but hold the energy. To be readied, a spell must have a casting time of one action, and readying it requires
+    span.emph< concentration
+    |. If your concentration is broken, the spell dissipates without effect.
+  h5 Search
+  p
+    | Devote your attention to finding something. DM might have you roll Wisdom (Perception) or Intelligence (Investigation).
+  h5 Use an Object
+  p
+    | When an object requires your action for its use, or you want to interact with more than one object on your turn.
+  h3 Free Activity
+  p
+    | You may interact with one object on your turn, or communicate briefly, without using an action or your movement.
