Final prep for session 1 Behind the Wall

--- a/source/npcs.html.slim
+++ b/source/npcs.html.slim
@@ -2,3 +2,140 @@
 title: NPCs
 public: false
 ---
+section.columns
+  h3.span-all = current_page.data.title
+  .group
+    h5 Otixan
+    p Bronze dragonborn governor of Rathbaran. Desires power and territory. Imagines himself to be just. Dreams of the glory days of the empire. Dragonborn supremacist. Pompous. Values loyalty.
+
+  .group
+    h5 Mishann
+    p Former governor of Rathbaran.
+
+  .group
+    h5 Suthalion
+    p Half-elf leader of a band of rebels. Believes that all legacy of the empire should be erased; wants to return to the pre-empire ancient past. Collects relics from that past. Doesn't hate dragonborn necessarily, but hates their inherited power and wealth; thinks the rich should be cast down. Cautious. Looking for heroes.
+
+  .group
+    h4 Militia on the Wall
+    h5 Lilohym
+    p Red dragonborn commander on the wall. Values heroism & skill in battle above all else. Disappointed with the quality of militia, but determined to make it work. Pragmatic. Loyal to her soldiers, Rathbaran, and Otixan, in that order.
+
+  .group
+    h5 Gondring
+    p Aging elf lieutenant. In charge of training recruits. Old guard imperial; served during the golden age and still believes the fall of the empire is a great loss to the world. Stern. A bit brutal in his discipline.
+
+  .group
+    h5 Vrakrinn
+    p Black dragonborn quartermaster. Elitist, dragonborn supremacist. Loves classical imperial music.
+
+  .group
+    h5 Belnys
+    p White dragonborn storm barbarian, follower of Ceozet. Respects orcs and their culture. Bloodthirsty. Battle-hardened. Loner. Doesn't respect authority.
+
+  .group
+    h5 Brint
+    p Halfling criminal conscript. On galley duty. Coarse. Vulgar. Contemptuous of elites, especially Otixan.
+
+  .group
+    h5 Beluvur
+    p Beluvur is a male tiefling conscripted into the militia. He's a decent scout, but has not found a place on the wall, as he is severely distrusted. Bitter, resentful, angry.
+
+  .group
+    h4 Suthalion's Band
+    h5 Aladhar
+    p Suthalion's right-hand dwarf. 100% loyal. Hates dragonborn, doesn't care about Rathbaran &mdash; would just as soon destroy all former-imperial cities and rebuild, but mostly sticks to Suthalion's party line. Soft spot for defending the helpless. Soft-spoken but firm.
+
+  .group
+    h5 Merjin
+    p Gnome bard, curator of Suthalion's collection and surprisingly powerful spellcaster. Long-winded, very knowledgeable, but actually not that great a performer. Not particularly loyal to Suthalion's political ambitions, but very interested in his archeological research.
+
+//
+  .group
+    h4 Darvi
+    h5 Belron Hammersong
+    p Darvi's uncle who taught him to play. Boisterous, drunk bachelor who loves to party.
+
+//
+  .group
+    h5 Pallandor
+    p Elf bard who set Darvi on the path of the bard. Quiet but skilled musician. Generous.
+
+//
+  .group
+    h5 Zofgwen Prildreac
+    p Blue dragonborn noblewoman in Aerlanc who hired Darvi through an intermediary to provide information about Rathbaran. Sneaky, power-hungry and greedy, wishes to establish a trade empire in the city-states of the north.
+
+//
+  .group
+    h4 Sogiya
+    h5 Belednac
+    p Gnome conspiracy theorist who bequeathed his notes to Sogiya. Talkative, paranoid, lonely.
+
+//
+  .group
+    h4 Cyr
+    h5 Cyr (the elder)
+    p
+      | Cyr's grandfather, now deceased, who taught him
+      span.i<> sway
+      | and gifted him his amulet.
+
+//
+  .group
+    h5 Esmee Helmholder-Stumblefoot
+    p Cyr's grandmother, 75, senile.
+
+//
+  .group
+    h5 Alfric Stumblefoot
+    p Cyr's father, proprietor of the Stumbling Fool.
+
+//
+  .group
+    h5 Olivia Stumblefoot
+    p Cyr's mother, head brewer/distiller at the Fool.
+
+//
+  .group
+    h5 Blesinde, Fredegar, Qualia, Corbin
+    p Cyr's siblings. Blesinde is married to Idobin Knothand; they have a 2-year-old daughter.
+
+//
+  .group
+    h5 Laras &amp; Omar Whitecap
+    p Cyr's uncle by marriage and cousin. Uncle still works at the Stumbling Fool.
+
+//
+  .group
+    h4 Thargra
+    h5 Polg
+    p Thargra's half-sister. Cruel to Thargra; competitive. Doesn't respect her artistic side.
+//
+    h5 Marska
+    p Thargra's mother. Raid captain in the Wallbreaker clan. Forced her daughters to fight. Wants them to be strong warriors above all else.
+//
+  .group
+    h4 Tarhun
+    h5 Fildo Jamjar
+    p Halfling druid who cared for young Tarhun in the caravan.
+//
+  .group
+    h5 Unvera Leffery
+    p Gnome paladin who cared for young Tarhun in the caravan.
+//
+  .group
+    h5 Umro Pinemore
+    p Human monk who turned Tarhun in for kidnapping. Still bears a grudge.
+//
+  .group
+    h5 Surina
+    p Blue dragonborn member of the Crucible. Early mentor to Tarhun in the order.
+//
+  .group
+    h5 Eggren Caavylteradyn
+    p Tarhun's estranged ex-wife. Disapproves of his devotion to the Order of the Crucible. Wants nothing to do with him. Top priority is her daughter.
+//
+  .group
+    h5 Jezean
+    p Tarhun's daughter with Eggren. 6 years old.
