--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -142,6 +142,11 @@ p + p {
     text-indent: 1em;
 }
 
+ul {
+    margin: 0;
+    padding-left: 1.2em;
+}
+
 ul.simple {
     margin: 0;
     padding: 0 0 0.5em 1em;
@@ -149,9 +154,18 @@ ul.simple {
     white-space: nowrap;
 }
 
-ul {
-    margin: 0;
-    padding-left: 1.2em;
+ul.checklist {
+    list-style: none;
+    padding: 0 0 0 2px;
+    li:before {
+        content: " ";
+        display: inline-block;
+        border: 1px solid $bg-dark;
+        border-radius: 2px;
+        margin-right: 0.4rem;
+        width: 0.8rem;
+        height: 0.8rem;
+    }
 }
 
 table {
