--- a/source/partials/_stat_block.slim
+++ b/source/partials/_stat_block.slim
@@ -23,7 +23,7 @@ div class="stat-block#{' half' unless double}"
   - if creature[:skills]
     .skills.hang
       span.b> Skills
-      = creature[:skills].map { |skill, bonus| "#{skill.capitalize} #{'%+d' % bonus}" }.join(', ')
+      = creature[:skills].map { |skill, bonus| "#{titleize(skill)} #{'%+d' % bonus}" }.join(', ')
       = " #{creature[:append][:skills]}" if creature[:append] && creature[:append][:skills]
 
   - if creature[:vulnerability]
@@ -66,7 +66,7 @@ div class="stat-block#{' half' unless double}"
     .features
       - creature[:features].each do |title, text|
         .feature
-          span.subhead> #{title.split(' ').map(&:capitalize).join(' ')}.
+          span.subhead> #{titleize(title)}.
           = text[0]
         - text[1..].each do |more|
           p #{more}
@@ -75,7 +75,7 @@ div class="stat-block#{' half' unless double}"
     h6 Actions
     - creature[:actions].each do |title, action|
       .action
-        span.subhead> #{title.split(' ').map(&:capitalize).join(' ')}.
+        span.subhead> #{titleize(title)}.
         span.i>
           - if action[:attack]
             = [('Melee' if action[:melee]), ('Ranged' if action[:ranged])].compact.join(' or ')
