--- a/source/partials/_stat_block.slim
+++ b/source/partials/_stat_block.slim
@@ -13,10 +13,21 @@ div class="stat-block#{' half' unless double}"
     = creature[:ac].to_s + (creature[:armor] ? " #{creature[:armor].join(', ')}" : '')
   .hp
     span.b> Hit Points
-    | #{creature[:hp]} (#{creature[:hd]})
+    | #{avg(creature[:hd])} (#{creature[:hd]})
   .speed
     span.b> Speed
     = creature[:speed].map { |mode, speed| "#{mode unless mode == 'walk'} #{speed} ft."}.join(', ')
+
+  .bar
+
+  .ability_scores.flex
+    - creature[:ability_scores].each do |key, val|
+      .ability
+        =key.upcase
+        .score
+          =val
+          span.modifier<
+            | (#{'%+d' % mod(val)})
 
   .bar
 
@@ -75,21 +86,21 @@ div class="stat-block#{' half' unless double}"
     h6 Actions
     - creature[:actions].each do |title, action|
       .action
-        span.subhead> #{titleize(title)}.
+        span.subhead> #{[titleize(title), ('(' + action[:recharge] + ')' if action[:recharge])].compact.join(' ')}.
         span.i>
           - if action[:attack]
             = [('Melee' if action[:melee]), ('Ranged' if action[:ranged])].compact.join(' or ')
             |  #{('Weapon' if action[:weapon])} Attack.
-        | #{'%+d' % action[:hit]} to hit,
-        = [(' reach ' + action[:reach].to_s + ' ft.' if action[:reach]), (' range ' + action[:range].join('/') + ' ft.' if action[:range])].compact.join(' or')
-        |, one target.
-        span.i<> Hit:
-        | #{action[:damage]} #{action[:damage_type]} damage
-        - if action[:extra]
-          = ', ' + action[:extra][0]
-          - action[:extra][1..].each do |text|
-            p=text
-        - else
-          |.
- 
-
+            | #{'%+d' % action[:hit]} to hit,
+            = [(' reach ' + action[:reach].to_s + ' ft.' if action[:reach]), (' range ' + action[:range].join('/') + ' ft.' if action[:range])].compact.join(' or')
+            |, one target.
+            span.i<> Hit:
+            | #{avg(action[:damage])} (#{action[:damage]}) #{action[:damage_type]} damage
+            - if action[:extra]
+              = ', ' + action[:extra][0]
+              - action[:extra][1..].each do |text|
+                p=text
+            - else
+              |.
+          - else
+            = action[:text]
