--- a/source/partials/_stat_block.slim
+++ b/source/partials/_stat_block.slim
@@ -45,8 +45,7 @@ div class="stat-block#{' half' unless double}"
   - if creature[:resistance]
     .resistance.hang
       span.b> Damage Resistances
-      = creature[:resistance].select { |type| !type.include?(',') }.join(', ')
-      = "; #{creature[:resistance].select { |type| type.include?(',') }.join('; ')}" unless creature[:resistance].select { |type| type.include?(',') }.empty?
+      = [creature[:resistance].select { |type| !type.include?(',') }.join(', '), creature[:resistance].select { |type| type.include?(',') }].select { |part| !part.blank? }.join('; ')
 
   - if creature[:damage_immunity]
     .damage-immunity.hang
@@ -87,20 +86,20 @@ div class="stat-block#{' half' unless double}"
     - creature[:actions].each do |title, action|
       .action
         span.subhead> #{[titleize(title), ('(' + action[:recharge] + ')' if action[:recharge])].compact.join(' ')}.
-        span.i>
-          - if action[:attack]
-            = [('Melee' if action[:melee]), ('Ranged' if action[:ranged])].compact.join(' or ')
-            |  #{('Weapon' if action[:weapon])} Attack.
-            | #{'%+d' % action[:hit]} to hit,
-            = [(' reach ' + action[:reach].to_s + ' ft.' if action[:reach]), (' range ' + action[:range].join('/') + ' ft.' if action[:range])].compact.join(' or')
-            |, one target.
-            span.i<> Hit:
-            | #{avg(action[:damage])} (#{action[:damage]}) #{action[:damage_type]} damage
-            - if action[:extra]
-              = ', ' + action[:extra][0]
-              - action[:extra][1..].each do |text|
-                p=text
-            - else
-              |.
+        - if action[:attack]
+          span.i>
+              = [('Melee' if action[:melee]), ('Ranged' if action[:ranged])].compact.join(' or ')
+              |  #{('Weapon' if action[:weapon])} Attack.
+          | #{'%+d' % action[:hit]} to hit,
+          = [(' reach ' + action[:reach].to_s + ' ft.' if action[:reach]), (' range ' + action[:range].join('/') + ' ft.' if action[:range])].compact.join(' or')
+          |, one target.
+          span.i<> Hit:
+          | #{avg(action[:damage])} (#{action[:damage]}) #{action[:damage_type]} damage
+          - if action[:extra]
+            = ', ' + action[:extra][0]
+            - action[:extra][1..].each do |text|
+              p=text
           - else
-            = action[:text]
+            |.
+        - else
+          = action[:text]
