--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -352,6 +352,7 @@ aside {
     font-size: 14px;
     padding: 0.4em;
     font-family: 'Scaly Sans', sans-serif;
+    page-break-inside: avoid;
     .bar {
         display: block;
         width: 0;
@@ -414,7 +415,7 @@ aside {
     .initiative-tracker {
         display: flex;
         flex-direction: column;
-        width: 20%;
+        width: 19%;
         border-radius: 5px;
         border: 1px solid $bg-dark;
         margin-right: 0.8rem;
@@ -428,7 +429,7 @@ aside {
     }
 
     > div:not(.initiative-tracker) {
-        width: 79%;
+        width: 80%;
     }
 
     .content > div {
@@ -448,7 +449,8 @@ aside {
             flex-direction: row;
             flex-wrap: wrap;
             .enemy {
-                min-width: 11rem;
+                font-size: 14px;
+                min-width: 11em;
                 margin-right: 0.4rem;
                 margin-bottom: 0.4rem;
             }
@@ -457,7 +459,7 @@ aside {
 
     .stat-block {
         .bar {
-            border-left: 26em solid $bg-dark;
+            border-left: 25em solid $bg-dark;
         }
     }
 }
