--- a/source/partials/_stat_block.slim
+++ b/source/partials/_stat_block.slim
@@ -74,11 +74,14 @@ div.stat-block
   .bar
   - if creature[:features]
     .features
-      - creature[:features].each do |title, text|
+      - creature[:features].each do |title, feature|
         .feature
-          span.subhead> #{titleize(title)}.
-          = text[0]
-        - text[1..].each do |more|
+          span.subhead>
+            = titleize(title)
+            = " (#{feature[:recharge]})" if feature[:recharge]
+            |.
+          = feature[:text][0]
+        - feature[:text][1..].each do |more|
           p #{more}
   - if creature[:spellcasting]
     .features
@@ -94,22 +97,10 @@ div.stat-block
   .actions
     h6 Actions
     - creature[:actions].each do |title, action|
-      .action
-        span.subhead> #{[titleize(title), ('(' + action[:recharge] + ')' if action[:recharge])].compact.join(' ')}.
-        - if action[:attack]
-          span.i>
-              = [('Melee' if action[:melee]), ('Ranged' if action[:ranged])].compact.join(' or ')
-              |  #{('Weapon' if action[:weapon])} Attack.
-          | #{'%+d' % action[:hit]} to hit,
-          = [(' reach ' + action[:reach].to_s + ' ft.' if action[:reach]), (' range ' + action[:range].join('/') + ' ft.' if action[:range])].compact.join(' or')
-          |, one target.
-          span.i<> Hit:
-          | #{avg(action[:damage])} (#{action[:damage]}) #{action[:damage_type]} damage
-          - if action[:extra]
-            = ', ' + action[:extra][0]
-            - action[:extra][1..].each do |text|
-              p=text
-          - else
-            |.
-        - else
-          = action[:text]
+      = partial('partials/action', locals: { title: title, action: action })
+
+  - if creature[:reactions]
+    .actions
+      h6 Reactions
+      - creature[:reactions].each do |title, action|
+        = partial('partials/action', locals: { title: title, action: action })
