--- a/source/worksheets/henchmen.html.slim
+++ b/source/worksheets/henchmen.html.slim
@@ -2,38 +2,47 @@
 title: Henchmen
 public: false
 ---
-section.flex
-  = partial('partials/stat_block', locals: { creature: data.creatures.pallandor, double: false })
-  .description.space-above
-    span.emph> Pallandor
-    | is an elf and an experienced hunter from Druinnagol, who owes no particular allegiance to Rathbaran but who nevertheless has volunteered his bow to help defend the north from orcish incursions. He is fascinated by magic, though he lacks any magical ability of his own.
+section.flex.tall.one-sided.fill-page
+  .flex.space-above
+    = partial('partials/stat_block', locals: { creature: data.creatures.pallandor, double: false })
+    .description.space-above
+      span.emph> Pallandor
+      | is an elf and an experienced hunter from Druinnagol, who owes no particular allegiance to Rathbaran but who nevertheless has volunteered his bow to help defend the north from orcish incursions. He is fascinated by magic, though he lacks any magical ability of his own.
 
 
-.flex.space-above
-  = partial('partials/stat_block', locals: { creature: data.creatures.beluvur, double: false })
-  .description.space-above
-    span.emph> Beluvur
-    | is a male, red-skinned tiefling with a single wide, curved horn protruding from his forehead. He has stringy, thin black hair and a seriously recessed hairline. He has been shunned by the majority of the militia.
+  .flex.space-above
+    = partial('partials/stat_block', locals: { creature: data.creatures.beluvur, double: false })
+    .description.space-above
+      span.emph> Beluvur
+      | is a male, red-skinned tiefling with a single wide, curved horn protruding from his forehead. He has stringy, thin black hair and a seriously recessed hairline. He has been shunned by the majority of the militia.
 
+section.blank-page
 
-.flex.space-above
-  = partial('partials/stat_block', locals: { creature: data.creatures.brooner, double: false })
-  .description.space-above
-    span.emph> Brooner
-    | is a horse. He's very patient. Not a warhorse, but sufficiently used to battle not to be immediately spooked.
+section.flex.tall.one-sided.fill-page
+  .flex.space-above
+    = partial('partials/stat_block', locals: { creature: data.creatures.brooner, double: false })
+    .description.space-above
+      span.emph> Brooner
+      | is a horse. He's very patient. Not a warhorse, but sufficiently used to battle not to be immediately spooked.
 
+  .flex.space-above
+    = partial('partials/stat_block', locals: { creature: data.creatures.belnys, double: false })
+    .description.space-above
+      span.emph> Belnys
+      | is a white-scaled female dragonborn of somewhat short stature (only 6'2"). She has a reputation of being a bit of a brute and a loner. She has no love for authority.
 
-section.flex
-  = partial('partials/stat_block', locals: { creature: data.creatures.frollo, double: false })
-  .description.space-above
-    span.emph> Frollo
-    | is a rotund male halfling with curly dark hair. He likes to talk at length about the food he misses from home. Not much of a warrior, Frollo nevertheless has shown both courage and a willingness to follow orders, at least in training.
+section.blank-page
 
-.flex.space-above
-  = partial('partials/stat_block', locals: { creature: data.creatures.belnys, double: false })
-  .description.space-above
-    span.emph> Belnys
-    | is a white-scaled female dragonborn of somewhat short stature (only 6'2"). She has a reputation of being a bit of a brute and a loner. She has no love for authority.
+section.flex.tall.one-sided.fill-page
+  .flex.space-above
+    = partial('partials/stat_block', locals: { creature: data.creatures.frollo, double: false })
+    .description.space-above
+      span.emph> Frollo
+      | is a rotund male halfling with curly dark hair. He likes to talk at length about the food he misses from home. Not much of a warrior, Frollo nevertheless has shown both courage and a willingness to follow orders, at least in training.
 
-
+  .flex.space-above
+    = partial('partials/stat_block', locals: { creature: data.creatures.remin, double: false })
+    .description.space-above
+      span.emph> Remin
+      | is a 7-and-a-half foot tall goliath with grey skin and a bald head. He is competitive and admires strength.
 
