Orc Diplomacy planning

--- a/source/encounters/beyond_the_wall.html.slim
+++ b/source/encounters/beyond_the_wall.html.slim
@@ -34,7 +34,7 @@ hobgoblin_manufactory:
 orc_shaman:
   creatures:
     dust_mephit: 4
-    orc_shaman: 1
+    orc_wise_one: 1
   question:
     - Can the PCs learn what the shaman knows about the land beyond the wall?
   motivation:
