--- a/source/npcs.html.slim
+++ b/source/npcs.html.slim
@@ -5,16 +5,13 @@ public: false
 section.columns
   h3.span-all = current_page.data.title
   .group
+    h4 Rathbaran
     h5 Otixan
     p Bronze dragonborn governor of Rathbaran. Desires power and territory. Imagines himself to be just. Dreams of the glory days of the empire. Dragonborn supremacist. Pompous. Values loyalty.
 
   .group
     h5 Mishann
     p Former governor of Rathbaran.
-
-  .group
-    h5 Suthalion
-    p Half-elf leader of a band of rebels. Believes that all legacy of the empire should be erased; wants to return to the pre-empire ancient past. Collects relics from that past. Doesn't hate dragonborn necessarily, but hates their inherited power and wealth; thinks the rich should be cast down. Cautious. Looking for heroes.
 
   .group
     h4 Militia on the Wall
@@ -31,7 +28,7 @@ section.columns
 
   .group
     h5 Belnys
-    p White dragonborn storm barbarian, follower of Ceozet. Respects orcs and their culture. Bloodthirsty. Battle-hardened. Loner. Doesn't respect authority.
+    p White dragonborn barbarian, follower of Ceozet. Bloodthirsty. Battle-hardened. Loner. Doesn't respect authority. Mutineer during Beyond the Wall expedition; attacked the party rather than agree to hand over elemental binding stones to the orc shaman.
 
   .group
     h5 Brint
@@ -39,16 +36,46 @@ section.columns
 
   .group
     h5 Beluvur
-    p Beluvur is a male tiefling conscripted into the militia. He's a decent scout, but has not found a place on the wall, as he is severely distrusted. Bitter, resentful, angry.
+    p Beluvur is a male tiefling conscripted into the militia. He's a decent scout, but has not found a place on the wall, as he is severely distrusted. Creepy, most find his appearance disgusting. Initially joined Belnys' mutiny, but then thought better of it to save his hide.
+
+  .group
+    h5 Remin
+    p Goliath warrior. Respects and follows strength. Views solutions to problems other than violence with skepticism. Loves overkill. Joined Belnys in her mutiny.
+
+  .group
+    h5 Frollo
+    p Halfling soldier. Not well-trained, but seems to have a knack for fighting and is quite brave. Loves food.
+
+  .group
+    h5 Brooner
+    p Horse.
 
   .group
     h4 Suthalion's Band
+    h5 Suthalion
+    p Half-elf leader of a band of rebels. Believes that all legacy of the empire should be erased; wants to return to the pre-empire ancient past. Collects relics from that past. Doesn't hate dragonborn necessarily, but hates their inherited power and wealth; thinks the rich should be cast down. Cautious. Looking for heroes.
+
+  .group
     h5 Aladhar
     p Suthalion's right-hand dwarf. 100% loyal. Hates dragonborn, doesn't care about Rathbaran &mdash; would just as soon destroy all former-imperial cities and rebuild, but mostly sticks to Suthalion's party line. Soft spot for defending the helpless. Soft-spoken but firm.
 
   .group
     h5 Merjin
     p Gnome bard, curator of Suthalion's collection and surprisingly powerful spellcaster. Long-winded, very knowledgeable, but actually not that great a performer. Not particularly loyal to Suthalion's political ambitions, but very interested in his archeological research.
+
+  .group
+    h4 Orcs
+    h5 Old Wise One
+    p Nameless orc shaman, who is seeking to understand the power of the elemental binding circles and what the hobgoblins are doing with them.
+
+    h5 Lokhan
+    p Follower of Ceozet (under a different name). Thinks the orcs should unite with the hobgoblins. Outcast from the white eagle tribe.
+
+    h5 Ulam
+    p Chief of the white eagle tribe. Untrusting. Proud.
+
+    h5 Agrigoth
+    p Shaman of the white eagle tribe. Defender or orcish traditions.
 
 //
   .group
