--- a/source/worksheets/magic_items.html.slim
+++ b/source/worksheets/magic_items.html.slim
@@ -5,7 +5,9 @@ public: false
 section.flex.tall
   = partial('partials/magic_item', locals: { item: data.items.stumblefoot_amulet })
   = partial('partials/magic_item', locals: { item: data.items.rod_of_fire_absorption })
+  = partial('partials/magic_item', locals: { item: data.items.headdress_of_the_warchief })
 
-
-
-
+section.flex.tall
+  = partial('partials/magic_item', locals: { item: data.items.hewards_handy_haversack })
+  = partial('partials/magic_item', locals: { item: data.items.quaals_feather_token_fan })
+  = partial('partials/magic_item', locals: { item: data.items.potion_of_greater_healing })
