Make Headdress of the Warchief sentient

--- a/source/npcs.html.slim
+++ b/source/npcs.html.slim
@@ -59,6 +59,7 @@ section.columns
     h5 Aladhar
     p Suthalion's right-hand dwarf. 100% loyal. Hates dragonborn, doesn't care about Rathbaran &mdash; would just as soon destroy all former-imperial cities and rebuild, but mostly sticks to Suthalion's party line. Soft spot for defending the helpless. Soft-spoken but firm.
 
+section.columns
   .group
     h5 Merjin
     p Gnome bard, curator of Suthalion's collection and surprisingly powerful spellcaster. Long-winded, very knowledgeable, but actually not that great a performer. Not particularly loyal to Suthalion's political ambitions, but very interested in his archeological research.
@@ -68,14 +69,29 @@ section.columns
     h5 Old Wise One
     p Nameless orc shaman, who is seeking to understand the power of the elemental binding circles and what the hobgoblins are doing with them.
 
+  .group
     h5 Lokhan
-    p Follower of Ceozet (under a different name). Thinks the orcs should unite with the hobgoblins. Outcast from the white eagle tribe.
+    p Follower of Ceozet (under a different name). Outcast from the white eagle tribe. Covets the headdress.
 
+  .group
     h5 Ulam
-    p Chief of the white eagle tribe. Untrusting. Proud.
+    p Chief of the white eagle tribe. Untrusting. Proud. Desires the headdress.
 
+  .group
     h5 Agrigoth
     p Shaman of the white eagle tribe. Defender or orcish traditions.
+
+  .group
+    h5 Headdress of the Warchief
+    p The headdress is an sentient magic item with Int 14, Wis 10, Cha 19. It can see and hear with darkvision out to 120 ft. It communicates telepathically in Orcish. Its goals are to unite the orcish hordes and dominate all non-orcs. It may compromise the latter objective in the short term to achieve the former in the long term. It hopes for an unending state of war, in which only the strongest survive.
+
+  .group
+    h5 Marska
+    p Thargra's mother. Vicious, competitive, ambitious.
+
+  .group
+    h5 Polg
+    p Thargra's sister. Takes after her mother. Cruel streak.
 
 //
   .group
