--- a/source/partials/_magic_item.slim
+++ b/source/partials/_magic_item.slim
@@ -11,4 +11,6 @@
   - (item[:effects] || []).each do |title, text|
     p
       span.subhead> #{titleize(title)}.
-      = text
+      = text[0]
+    - text[1..].each do |paragraph|
+      p=paragraph
