Fix page height for encounter worksheets & column pages
Giving all sections a max-height of 11in was, unintuitively, causing
documents such as npcs to break to a third column, even when all content
could fit on an 8.5x11 page in two columns. But without max-height for
all sections, encounter worksheets with a lot of content were bleeding
over and causing blank pages. To compromise, I removed the max-height
from section elements in general, but added a max-height of 12in for
encounter worksheets in particular. Why 12 in? Good question; just
seemed to work based on trial and error.

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -72,7 +72,6 @@ $black: #111;
 
     section {
         page-break-before: always;
-        max-height: 11in;
     }
 
     section.one-sided {
@@ -417,6 +416,11 @@ aside {
 }
 
 .encounter {
+    // Not sure why but 12in fits on a page.
+    // 12.5in is too much, though, and causes a blank page
+    // between encounters. This is a hack, probably a
+    // permanent one, sadly.
+    max-height: 12in;
     .initiative-tracker {
         display: flex;
         flex-direction: column;
@@ -424,6 +428,7 @@ aside {
         border-radius: 5px;
         border: 1px solid $bg-dark;
         margin-right: 0.8rem;
+        max-height: 11in;
         .initiative {
             line-height: 1.5;
             height: 2em;
