--- a/source/partials/_encounter_worksheet.slim
+++ b/source/partials/_encounter_worksheet.slim
@@ -1,4 +1,4 @@
-section.encounter.flex.fill-page
+section.encounter.flex
   .initiative-tracker
     - (-2..27).reverse_each do |i|
       .initiative="#{i}." if i % 5 == 0
